--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 
     <title>Football Sniper</title>
 
-    <!-- Bootstrap Core CSS -->
+    <!-- Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Fonturi -->
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&amp;subset=latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 
-    <!-- Plugin CSS -->
+    <!-- Plugins CSS -->
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome-animation.css">
     <link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.css">
@@ -48,7 +49,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a class="page-scroll" href="#download" class="btn btn-success"><i class="fa fa-arrow-circle-down"></i> Download</a>
+                    <li><a class="page-scroll" href="#download"><i class="fa fa-arrow-circle-down"></i> Download</a>
 
                     </li>
                     <li>
@@ -67,14 +68,7 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-sm-7">
-                    <div class="header-content">
-                        <div class="header-content-inner">
-                            <h1>Football Sniper is Lorem Ipsum Dolor!</h1>
-                            <a href="#download" class="btn btn-outline btn-xl page-scroll">Download for Free!</a>
-                        </div>
-                    </div>
-                </div>
+
                 <div class="col-sm-5">
                     <div class="device-container">
                         <div class="device-mockup iphone6_plus portrait black">
@@ -87,6 +81,15 @@
                                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-7">
+                    <div class="header-content">
+                        <div class="header-content-inner">
+                            <h1>Football Sniper is Lorem Ipsum Dolor!</h1>
+                            <a href="#download" class="btn btn-outline btn-xl page-scroll">Download for Free!</a>
                         </div>
                     </div>
                 </div>
@@ -121,20 +124,6 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4">
-                    <div class="device-container">
-                        <div class="device-mockup iphone6_plus portrait black">
-                            <div class="device">
-                                <div class="screen">
-                                    <!-- Demo image pt mockup, image here, some HTML, an animation, video sau altceva! -->
-                                    <img src="img/demo-screen-1.jpg" class="img-responsive" alt=""> </div>
-                                <div class="button">
-                                    <!-- You can hook the "home button" to some JavaScript events or just remove it -->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <div class="col-md-8">
                     <div class="container-fluid">
                         <div class="row">
@@ -172,6 +161,22 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-md-4">
+                    <div class="device-container">
+                        <div class="device-mockup iphone6_plus portrait black">
+                            <div class="device">
+                                <div class="screen">
+                                    <!-- Demo image pt mockup, image here, some HTML, an animation, video sau altceva! -->
+                                    <img src="img/demo-screen-1.jpg" class="img-responsive" alt=""> </div>
+                                <div class="button">
+                                    <!-- You can hook the "home button" to some JavaScript events or just remove it -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
     </section>
 
@@ -189,14 +194,14 @@
         <div class="container">
             <h2>Follow us on:</h2>
             <ul class="list-inline list-social">
-                <li class="social-twitter">
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                </li>
                 <li class="social-facebook">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
+                  <a href="#"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li class="social-google-plus">
                     <a href="#"><i class="fa fa-google-plus"></i></a>
+                </li>
+                <li class="social-twitter">
+                    <a href="#"><i class="fa fa-twitter"></i></a>
                 </li>
             </ul>
         </div>
@@ -232,7 +237,7 @@
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
-    <!-- Theme JavaScript -->
+    <!-- JavaScript -->
     <script src="js/footballsniper.min.js"></script>
 
 </body>
