--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <a class="navbar-brand page-scroll" href="#page-top"><img src="img/FSlogo.png" width="150px" alt="Football Sniper"></a>
             </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
+            <!-- toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a class="page-scroll" href="#download"><i class="fa fa-arrow-circle-down"></i> Download</a>
@@ -78,7 +78,7 @@
                                     <img src="img/demo-screen-1.jpg" class="img-responsive" alt="">
                                 </div>
                                 <div class="button">
-                                    <!-- You can hook the "home button" to some JavaScript events or just remove it -->
+                                    <!-- Butonul poate avea js events -->
                                 </div>
                             </div>
                         </div>
@@ -170,7 +170,7 @@
                                     <!-- Demo image pt mockup, image here, some HTML, an animation, video sau altceva! -->
                                     <img src="img/demo-screen-1.jpg" class="img-responsive" alt=""> </div>
                                 <div class="button">
-                                    <!-- You can hook the "home button" to some JavaScript events or just remove it -->
+                                    <!-- Butonul poate avea js events -->
                                 </div>
                             </div>
                         </div>
@@ -231,7 +231,7 @@
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
+    <!-- Bootstrap JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
