Ball animation changes

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <i class="fa fa-futbol-o faa-spin animated"></i>
+                                    <i class="fa fa-futbol-o faa-spin animated faa-slow"></i>
                                     <h3>Lorem Ipsum</h3>
                                     <p class="text-muted">Aenean eu praesent hendrerit lacus duis sollicitudin</p>
                                 </div>
@@ -145,7 +145,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                  <i class="fa fa-futbol-o faa-vertical animated" "text-primary"></i>
+                                  <i class="fa fa-futbol-o faa-bounce animated faa-fast" "text-primary"></i>
 
                                   <h3>Lorem Ipsum</h3>
                                   <p class="text-muted">Aenean eu praesent hendrerit lacus duis sollicitudin</p>
@@ -153,7 +153,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <i class="fa fa-futbol-o faa-spin animated"></i>
+                                    <i class="fa fa-futbol-o faa-passing animated"></i>
                                     <h3>Lorem Ipsum</h3>
                                     <p class="text-muted">Aenean eu praesent hendrerit lacus duis sollicitudin</p>
                                 </div>
